# mnemonic

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_issue.md  feature_request.md
.github/workflows/: ci.yml
docs/: index.md  quickstart.md
docs/architecture/: components.md  data-flow.md  overview.md
docs/guides/: backups.md  cli-and-scripts.md  mcp-clients.md  obsidian.md  reindexing.md
docs/installation/: configuration.md  docker.md  local-dev.md
docs/reference/: cli-and-scripts.md  environment-variables.md  performance.md  (+1 more)
mcp-memory/: Dockerfile  conftest.py  pyproject.toml
mcp-memory/scripts/: backup_sqlite.py  benchmark.py  benchmark_native.py  init_db.py  rebuild_fts.py  rebuild_obsidian.py  rebuild_qdrant.py  restore_sqlite.py
mcp-memory/src/mcp_memory/: __init__.py  config.py  database.py  embedding.py  errors.py  health.py  health_check.py  main.py  migrations.py  models.py  obsidian_store.py  outbox.py  qdrant_store.py  repository.py  scripts_restore.py  search.py  tools.py
mcp-memory/tests/: test_backup_restore.py  test_batch.py  test_benchmark.py  test_config.py  test_docker_compose.py  test_docker_e2e.py  test_health_check.py  test_migrations.py  test_obsidian_projection.py  test_outbox.py  test_plan_alignment.py  test_qdrant_store.py  test_repository.py  test_search.py  test_search_advanced.py  test_tools.py  test_vector.py
(+8 files in other folders)
