[project]
name = "mnemonic-mcp"
version = "0.1.0"
description = "Local-first memory infrastructure for AI"
requires-python = ">=3.11"
dependencies = [
  "fastmcp",
  "pydantic>=2",
  "qdrant-client",
]
keywords = ["mcp", "memory", "obsidian", "qdrant", "local-first"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"